test/tests/stages/8_loops/invalid_semantics/out_of_scope_do_loop.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  int
  identifier(main)
  (
  void
  )
  {
  do
  {
  int
  identifier(a)
  =
  identifier(a)
  +
  const int(1)
  ;
  }
  while
  (
  identifier(a)
  <
  const int(100)
  )
  ;
  }
